# UMPK80-IDE

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
UMPK-80-IDE-Client-App/: package-lock.json  package.json  vite.config.ts
public/: instruction-documentation.json.ts
src-client-app/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src-client-app/src/: App.tsx  DockLayout.tsx  docklayout.css  index.css  intel8080.ts  main.tsx
src-client-app/src/assets/: ExportToWordIcon.tsx  dd.json  docCommands.json  docIntel8080Commands.ts  out.json  parser.js
src-client-app/src/components/: CodeEditorTab.tsx  (+5 more)
src-tauri/: Cargo.toml  README.MD  build.rs  monitor.i8080asm.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor_commands.rs  main.rs  squarewave.rs  tone.rs  translator_commands.rs  translator_lib.rs  translator_service.rs  umpk80.rs  umpk80_commands.rs  umpk80_lib.rs
src/app/: SevenSegmentDisplay.tsx  UmpkCodeEditor.tsx  dummyData.tsx  globals.css  layout.tsx  page.tsx
src/components/: Intel8080AssemblyGuideTab.tsx  RamTab..tsx  RegistersPayload.tsx  UmpkProgramView.tsx  defaultLayout.tsx  no-ssr.tsx  settingsContext.tsx  seven-segment-display.tsx  side-menu.tsx  spa.tsx  toolbar.tsx  umpk-code-editor.tsx  umpk-display.tsx  umpk-io-output.tsx  umpk-keyboard.tsx  umpk-registers-control.tsx  umpk-tab.tsx  umpk-terminal.tsx  umpkStack.tsx
src/lib/: utils.ts
src/monaco-languages/: intel8080.ts
src/services/: terminal.ts
src/store/: editor-store.ts  translator-store.ts  umpk.ts
(+44 files in other folders)
