[package]
name = "UMPK-80-IDE"
version = "0.1.0"
description = "IDE for UMPK-80 developers"
authors = ["GalaxyShad"]
license = ""
repository = ""
default-run = "UMPK-80-IDE"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-save", "dialog-open"] }
libc = "0.2.147"
tempfile = "3.10.1"
rodio = "0.17.3"
log = "0.4.21"
csv = "1.3.0"
thiserror = "1.0.58"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
